--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
                 </div>
             </div>
         </nav>
+        <header>
+            <p class="header__sobre">Sobre nós</p>
+            <h1 class="header__titulo">Por que somos diferentes?</h1>
+            <p class="header__objetivo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        </header>
     </body>
 </html>
